typescript/checker/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithAnyAndEveryType.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            136,
        ),
        hi: BytePos(
            137,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithAnyAndEveryType.ts:10:5
   |
10 | var b: boolean;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            152,
        ),
        hi: BytePos(
            153,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithAnyAndEveryType.ts:11:5
   |
11 | var c: number;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            167,
        ),
        hi: BytePos(
            168,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithAnyAndEveryType.ts:12:5
   |
12 | var d: string;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            182,
        ),
        hi: BytePos(
            183,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithAnyAndEveryType.ts:13:5
   |
13 | var e: Object;
   |     ^

